# wow-silverdragon

./: .gitignore  .luacheckrc  .pkgmeta  .travis.yml  Bindings.xml  CHANGELOG.md  Core.lua  Defaults.deDE.lua  Defaults.lua  Defaults.zhCN.lua  Defaults.zhTW.lua  Locale.deDE.lua  Locale.enUS.lua  Locale.zhCN.lua  Locale.zhTW.lua  Locals.enUS.lua  README.md  SilverDragon.toc  achievements.lua  announce.lua  cartographer.lua  clicktarget.lua  conditions.lua  config.lua  core.lua  dataminer.lua  embeds.xml  handynotes.lua  ldb.lua  loot.lua  macro.lua  mobs.lua  npcscan.lua  shards.lua  slash.lua  sync.lua  util.lua
Data/: SilverDragon_Data.toc  dataminer.lua  dataminer.py  defaults.lua  map.lua  map.py  module.lua  module.xml  rares_deDE.lua  rares_enUS.lua  rares_esES.lua  rares_frFR.lua  rares_ruRU.lua  rares_zhTW.lua
Data_Classic/: module.xml
History/: SilverDragon_History.toc  config.lua  module.lua  module.xml
Overlay/: SilverDragon_Overlay.toc  colors.lua  config.lua  minimap.lua  module.lua  module.xml  nodes.lua  pins.lua  pins.xml  worldmap.lua
RangeExtender/: SilverDragon_RangeExtender.toc  config.lua  module.lua  module.xml  pins.xml
integration/: handynotes.lua  npcscan.lua  tomtom.lua
outputs/: announce.lua  clicktarget.lua  ldb.lua  sync.lua  (+5 more)
tools/: .gitignore  build_changelog.py  dataminer.py  lootimport.py  lootminer.py  lua.py  luatest.py  pyproject.toml  requirements.txt  test.py  zonegetter.py
tools/npc/: __init__.py  fetch.py  local.py  lua.py  luaparse.py  wowdb.py  wowhead.py  zones.py
tools/npc/lua/: __init__.py  luaparse.py  parse.py
(+58 files in other folders)
