[tool.poetry]
name = "silverdragon-tools"
version = "0.1.0"
description = "Tools for updating SilverDragon"
authors = ["David Lynch <kemayo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
requests-cache = "^0.5.2"
ply = "^3.11"
pyyaml = "^5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
