[tool.poetry]
name = "silverdragon-tools"
version = "0.1.0"
description = "Tools for updating SilverDragon"
authors = ["David Lynch <kemayo@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
requests-cache = "^1.1.0"
ply = "^3.11"
pyyaml = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
