[tool.poetry]
name = "silverdragon-tools"
version = "0.1.0"
description = "Tools for updating SilverDragon"
authors = ["David Lynch <kemayo@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
requests-cache = "^1.2.1"
ply = "^3.11"
pyyaml = "^6.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.8.2"]
build-backend = "poetry.masonry.api"
